Fix demo layout bugs by updating clearfix to flow-root

--- a/docs/output.css
+++ b/docs/output.css
@@ -42,6 +42,10 @@
   display: table
 }
 
+.flow-root {
+  display: flow-root
+}
+
 .float-left {
   float: left
 }
